# rs-xtree

./: .gitignore  Cargo.toml  README.ja.md  README.md  redeme.md  test.txt
.github/workflows/: build.yml
src/: cli.rs  constatns.rs  main.rs  stats.rs  tree.rs
src/foramt/: mod.rs  mode.rs  output.rs  sizeformat.rs  sort.rs
src/utils/: datetime.rs  files.rs  mod.rs  size.rs
