[package]
name = "rs-xtree"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rsxtree"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
colored = "3.0.0"
git2 = "0.20.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2" ,features = ["full"] }
async-recursion = "1"